# inha-chatbot

./: .gitignore  docker-compose.yml
app-fastapi/: Dockerfile  README.md  app.py  pyproject.toml
app-fastapi/chatbot/: __init__.py  chatbot.py  const.py  temp.py
app-fastapi/config/: __init__.py  log_config.py
app-fastapi/dto/: __init__.py  chat_dto.py
app-fastapi/preprocessing/: __init__.py  synonym_replacement.py
app-fastapi/preprocessing/data/: synonym.json
app-react/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.app.json  vite.config.ts
app-react/nginx/: nginx.conf
app-react/nginx/config/: react.conf
app-react/public/entrance_files/: blockUI.css  fnct.css  global.js  nav.js  popup_total.css  responsive.css  responsiveMobile.css  responsiveTablet.css  style(1).css  style(2).css  style(3).css  style(4).css  style(5).css  style(6).css  style.css  w_common.css  w_layout.css  w_main.css  w_reset.css
app-react/src/: main.tsx
app-react/src/api/: apiChat.ts
app-react/src/components/: App-test-origin.tsx  App.tsx
app-react/src/components/Chat/: ChatBox.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  index.ts
app-react/src/components/FloatingButton/: FloatingButton.tsx
app-react/src/hooks/: useChat.ts
app-react/src/types/: Message.ts
app-react/src/utils/: utilsDate.ts
app-springboot/: .gitignore  Dockerfile  build.gradle  settings.gradle
db-neo4j/: .gitignore  README.md
db-postgres/: README.md
(+44 files in other folders)
