[tool.poetry]
name = "app-fastapi"
version = "0.1.0"
description = ""
authors = ["3oh6un <leewh0829@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
langchain-core = "^0.2.11"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.14"
neo4j = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
